<resources>
    <string name="app_name">MoodSoup</string>
    <string name="google_maps_api_key">AIzaSyCOcmxlAK-MyCo4tQVk9FMIklihByKilyA</string>

    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register_login">Don\'t have an account? Sign up now.</string>
    <string name="register_confirm">Register</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_email">Invalid Email or Email is Taken</string>
    <string name="registration_page">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="newMood">New Mood</string>
    <string-array name="emotion">
        <item>Choose an emotion:</item>
        <item>Happy</item>
        <item>Sad</item>
        <item>Excited</item>
        <item>Angry</item>
        <item>Bored</item>
        <item>Tired</item>
        <item>Scared</item>
        <item>Surprised</item>
    </string-array>

    <string-array name="emotionFilter">
        <item>No Filter</item>
        <item>Happy</item>
        <item>Sad</item>
        <item>Excited</item>
        <item>Angry</item>
        <item>Bored</item>
        <item>Tired</item>
        <item>Scared</item>
        <item>Surprised</item>
    </string-array>

    <string-array name="social_situation">
        <item>Choose a social situation:</item>
        <item>Alone</item>
        <item>With one other person</item>
        <item>With two to several people</item>
        <item>With a crowd</item>
    </string-array>

    <string-array name="map_options">
        <item>Own Moods</item>
        <item>Other\'s moods</item>
    </string-array>


    <string name="title_activity_main">MoodSoup</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_following">Following</string>
    <string name="menu_follower">Followers</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_map">Maps</string>
    <string name="menu_send">Send</string>

    <!-- fragment_follower.xml -->
    <string name="requests">Requests</string>
    <string name="followers">Followers</string>

    <!-- fragment_following.xml -->
    <string name="following">Following</string>

    <string name="requested">Requested</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_mood_locations">Map</string>


    <!-- Error messages -->
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid Latitude Long Used</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_found">Address Found</string>
    <string name="reason_too_long">Reason must be less than twenty characters</string>

    <!-- profile.xml-->
    <string name="delete_mood">Delete Mood</string>
    <string name="edit_mood">Edit Mood</string>

    <!-- fragment_home.xml -->
    <string name="home">Home</string>

    <!-- activity_mood_view_fragment -->
    <string name="Post">Post</string>

    <!-- follow_search.xml -->
    <string name="Search">Search</string>
</resources>
