<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.test.moodsoup.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <activity
        android:id="@+id/nav_search"
        android:name="com.example.test.moodsoup.FollowSearch"
        android:label="@string/menu_search"
        tools:layout="@layout/follow_search" />
    <activity
        android:id="@+id/nav_following"
        android:name="com.example.test.moodsoup.Following"
        android:label="@string/menu_following"
        tools:layout="@layout/following" />
    <activity
        android:id="@+id/nav_profile"
        android:name="com.example.test.moodsoup.Profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile" />
    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.test.moodsoup.Login"
        android:label="@string/login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/nav_newMood"
        android:name="com.example.test.moodsoup.NewMood"
        android:label="@string/newMood"
        tools:layout="@layout/activity_newmood" />

</navigation>