<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/registration_page"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="30sp"
            android:paddingStart="120dp"/>

        <View
            android:id="@+id/divider_reg"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:background="@color/common_google_signin_btn_text_light_focused"
            android:backgroundTint="@color/common_google_signin_btn_text_light_focused" />

        <EditText
            android:layout_marginTop="40dp"
            android:id="@+id/email_new_user_tv"
            android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="textEmailAddress"
            android:hint="Email Address"
            android:background="@drawable/edittextborder"/>

        <TextView
            android:id="@+id/register_invalid_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/invalid_email"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/username_new_user_tv"
            android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="textPersonName"
            android:hint="Username"
            android:background="@drawable/edittextborder"/>

        <TextView
            android:id="@+id/register_invalid_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/invalid_username"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/password_new_user_tv"
            android:paddingStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="textPassword"
            android:hint="Password"
            android:background="@drawable/edittextborder"/>

        <Button
            android:id="@+id/register_new_user_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="#2196F3"
            android:text="@string/register_confirm"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed" />

    </LinearLayout>

</LinearLayout>