<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="238dp"
        android:layout_height="308dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/moodsoup_nobg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:background="@layout/rounded_border_edittext"
            android:paddingStart="15dp"/>

        <EditText
            android:layout_marginTop="15dp"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@layout/rounded_border_edittext"
            android:paddingStart="15dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#23a5f1"
            android:layout_marginTop="60dp"
            android:text="@string/login"
            android:textColor="#fff" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:background="@color/common_google_signin_btn_text_light_focused"
            android:backgroundTint="@color/common_google_signin_btn_text_light_focused"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/register_btn"
            style="@style/Base.AlertDialog.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/common_google_signin_btn_tint"
            android:text="@string/register"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>


</RelativeLayout>
